--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ ubelt = "*"
 rope = "*"
 pylint = "*"
 autopep8 = "*"
+twine = "*"
+setuptools = "*"
+wheel = "*"
 
 [requires]
 python_version = "3.10"
